--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -58,7 +58,8 @@ conky.config = {
     own_window_argb_visual = true,
     own_window_argb_value = 175,
     own_window_class = 'Conky',
-    own_window_type = 'desktop',
+    own_window_hints = 'undecorated,below,skip_taskbar,skip_pager,sticky',
+    own_window_type = 'override',
     stippled_borders = 0,
     uppercase = false,
     use_spacer = 'none',
