fix: conky atualizado para modificações do sxhkd

--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -45,7 +45,7 @@ conky.config = {
     gap_x = 5,
     gap_y = 60,
     minimum_height = 5,
-    minimum_width = 5,
+    minimum_width = 50,
     double_buffer = true,
     no_buffers = true,
     out_to_console = false,
@@ -56,9 +56,9 @@ conky.config = {
     own_window_colour = 'black',
     own_window_transparent = no,
     own_window_argb_visual = true,
-    own_window_argb_value = 175,
+    own_window_argb_value = 180,
     own_window_class = 'Conky',
-    own_window_hints = 'undecorated,below,skip_taskbar,skip_pager,sticky',
+	own_window_hints = 'undecorated,below,skip_taskbar,skip_pager,sticky',
     own_window_type = 'override',
     stippled_borders = 0,
     uppercase = false,
@@ -74,14 +74,23 @@ conky.text = [[
 # ${color1}Apps:
 # $hr
 ${color2} Super + Return    ${goto 150}$alignr${color3}Terminal
-${color2} Super + w         ${goto 150}$alignr${color3}Browser
-${color2} Super + e         ${goto 150}$alignr${color3}Emacsclient
-${color2} Super + r         ${goto 150}$alignr${color3}RStudio
+
+${color3}Browsers
+${color2} Super + w c       ${goto 150}$alignr${color3}Google-Chrome
+${color2} Super + w f       ${goto 150}$alignr${color3}Firefox
+${color2} Super + w b       ${goto 150}$alignr${color3}Brave
+${color3}Editors
+${color2} Super + e e       ${goto 150}$alignr${color3}Emacsclient
+${color2} Super + e n       ${goto 150}$alignr${color3}NVim
+${color2} Super + e v       ${goto 150}$alignr${color3}Vim
+${color2} Super + e r       ${goto 150}$alignr${color3}RStudio
+
 ${color2} Super + v         ${goto 150}$alignr${color3}VLC
 ${color2} Super + Shift + s ${goto 150}$alignr${color3}screenshot
 ${color2} Super + l         ${goto 150}$alignr${color3}Lock screen
+
 # $hr
-# ${color1}WM:
+${color3}DWM
 ${color2} Alt + p           ${goto 150}$alignr${color3}dmenu
 ${color2} Alt + b           ${goto 150}$alignr${color3}toggle status bar
 
