fix: conky com atalho para passmenu

--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -86,6 +86,7 @@ ${color2} Super + e v       ${goto 150}$alignr${color3}Vim
 ${color2} Super + e r       ${goto 150}$alignr${color3}RStudio
 
 ${color2} Super + v         ${goto 150}$alignr${color3}VLC
+${color2} Super + p         ${goto 150}$alignr${color3}passmenu
 ${color2} Super + Shift + s ${goto 150}$alignr${color3}screenshot
 ${color2} Super + l         ${goto 150}$alignr${color3}Lock screen
 
