fix: ajustes em systray, compton, conky

--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -73,12 +73,13 @@ conky.config = {
 conky.text = [[
 # ${color1}Apps:
 # $hr
-${color2} Super + Return    ${goto 150}$alignr${color3}Terminal
+${color2} Super + Shift + Return    ${goto 150}$alignr${color3}Terminal
 
 ${color3}Browsers
 ${color2} Super + w c       ${goto 150}$alignr${color3}Google-Chrome
 ${color2} Super + w f       ${goto 150}$alignr${color3}Firefox
 ${color2} Super + w b       ${goto 150}$alignr${color3}Brave
+
 ${color3}Editors
 ${color2} Super + e e       ${goto 150}$alignr${color3}Emacsclient
 ${color2} Super + e n       ${goto 150}$alignr${color3}NVim
@@ -86,35 +87,36 @@ ${color2} Super + e v       ${goto 150}$alignr${color3}Vim
 ${color2} Super + e r       ${goto 150}$alignr${color3}RStudio
 
 ${color2} Super + v         ${goto 150}$alignr${color3}VLC
-${color2} Super + p         ${goto 150}$alignr${color3}passmenu
+${color2} Super + Shift + f ${goto 150}$alignr${color3}file manager
+${color2} Super + Shift + p ${goto 150}$alignr${color3}passmenu
 ${color2} Super + Shift + s ${goto 150}$alignr${color3}screenshot
 ${color2} Super + l         ${goto 150}$alignr${color3}Lock screen
 
 # $hr
 ${color3}DWM
-${color2} Alt + p           ${goto 150}$alignr${color3}dmenu
-${color2} Alt + b           ${goto 150}$alignr${color3}toggle status bar
+${color2} Super + p         ${goto 150}$alignr${color3}dmenu
+${color2} Super + b         ${goto 150}$alignr${color3}toggle status bar
 
-${color2} Alt + Return      ${goto 150}$alignr${color3}toggle window
-${color2} Alt + j           ${goto 150}$alignr${color3}next window
-${color2} Alt + k           ${goto 150}$alignr${color3}previous window
-${color2} Alt + Shift + c   ${goto 150}$alignr${color3}close window
-${color2} Alt + Shift + q   ${goto 150}$alignr${color3}quit DWM
+${color2} Super + Return    ${goto 150}$alignr${color3}toggle window
+${color2} Super + j         ${goto 150}$alignr${color3}next window
+${color2} Super + k         ${goto 150}$alignr${color3}previous window
+${color2} Super + Shift + c ${goto 150}$alignr${color3}close window
+${color2} Super + Shift + q ${goto 150}$alignr${color3}quit DWM
 
-${color2} Alt + i           ${goto 150}$alignr${color3}increment master
-${color2} Alt + d           ${goto 150}$alignr${color3}decrement master
-${color2} Alt + h           ${goto 150}$alignr${color3}decrease split
-${color2} Alt + l           ${goto 150}$alignr${color3}increase split
+${color2} Super + i         ${goto 150}$alignr${color3}increment master
+${color2} Super + d         ${goto 150}$alignr${color3}decrement master
+${color2} Super + h         ${goto 150}$alignr${color3}decrease split
+${color2} Super + l         ${goto 150}$alignr${color3}increase split
 
-${color2} Alt + t           ${goto 150}$alignr${color3}tile mode
-${color2} Alt + m           ${goto 150}$alignr${color3}monocle mode
-${color2} Alt + f           ${goto 150}$alignr${color3}float mode
-${color2} Alt + Space       ${goto 150}$alignr${color3}toggle layouts
+${color2} Super + t         ${goto 150}$alignr${color3}tile mode
+${color2} Super + m         ${goto 150}$alignr${color3}monocle mode
+${color2} Super + f         ${goto 150}$alignr${color3}float mode
+${color2} Super + Space     ${goto 150}$alignr${color3}toggle layouts
 
-${color2} Alt + -           ${goto 150}$alignr${color3}decrease gap size
-${color2} Alt + +           ${goto 150}$alignr${color3}increase gap size
-${color2} Alt + Shift + =   ${goto 150}$alignr${color3}set gap size to 0
+${color2} Super + -         ${goto 150}$alignr${color3}decrease gap size
+${color2} Super + +         ${goto 150}$alignr${color3}increase gap size
+${color2} Super + Shift + = ${goto 150}$alignr${color3}set gap size to 0
 
-${color2} Alt + [1-9]       ${goto 150}$alignr${color3}switch to tag [1-9]
-${color2} Alt + Shift + [1-9] ${goto 150}$alignr${color3}move window to tag [1-9]
+${color2} Super + [1-9]     ${goto 150}$alignr${color3}switch to tag [1-9]
+${color2} Super + Shift + [1-9] ${goto 150}$alignr${color3}move window to tag [1-9]
 ]]
