--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,14 +2,14 @@
 set -g default-shell  "/bin/bash"
 set -g default-command "/bin/bash"
 
-set -g set-clipboard on
-set -g mouse on
+set -g set-clipboard on # uso da área de transferência do computador
+set -g mouse on # uso do mouse
 
 unbind C-b
-set -g prefix C-a
+set -g prefix C-a # remapeia o prefixo para C-a (igual ao GNU Screen)
 
 unbind r
-bind r source-file ~/.config/tmux/tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf # reinicializa o tmux com a configuração
 
 bind \" split-window -v -c "#{pane_current_path}"
 bind %  split-window -h -c "#{pane_current_path}"
